[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "glass.ext.config"
description = "GLASS configuration file support"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    { name = "Nicolas Tessore", email = "n.tessore@ucl.ac.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib_metadata>=3.6; python_version<'3.10'",
    "glass>=2023.6.dev0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinxcontrib-katex",
    "numpydoc",
    "furo",
]

[project.urls]
Homepage = "https://github.com/glass-dev/glass.ext.config"
Documentation = "https://glass.readthedocs.io/projects/config/"
Issues = "https://github.com/glass-dev/glass.ext.config/issues"

[project.entry-points."glass.shells"]
tophat = "glass.ext.config.shells:tophat_shells_from_config"
linear = "glass.ext.config.shells:linear_shells_from_config"
cubic = "glass.ext.config.shells:cubic_shells_from_config"

[project.entry-points."glass.shells.weight"]

[project.entry-points."glass.shells.grid"]
distance = "glass.ext.config.shells:distance_grid_from_config"

[project.entry-points."glass.fields.cls"]
load = "glass.ext.config.fields:load_cls_from_config"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
strict-naming = false

[tool.hatch.build.targets.wheel]
strict-naming = false
